# industrial-mixer-tutorial

./: README.md
perceptors/thermal_runaway_predictor/: pyproject.toml
perceptors/thermal_runaway_predictor/thermal_runaway_predictor/: perceptor.py
selectors/learned-selector/: pyproject.toml
selectors/learned-selector/learned_selector/: teacher.py
selectors/programmed-selector/: pyproject.toml
selectors/programmed-selector-ctft/: pyproject.toml
selectors/programmed-selector-ctft/programmed_selector_ctft/: controller.py
selectors/programmed-selector/programmed_selector/: controller.py
skills/control_reaction/: pyproject.toml
skills/control_reaction/control_reaction/: teacher.py
skills/control_reaction_perceptor/: pyproject.toml
skills/control_reaction_perceptor/control_reaction_perceptor/: teacher.py
skills/control_transition/: pyproject.toml
skills/control_transition/control_transition/: teacher.py
skills/mpc-benchmark/: pyproject.toml
skills/mpc-benchmark/mpc_benchmark/: controller.py
skills/mpc-skill-group/: pyproject.toml
skills/mpc-skill-group/mpc_skill_group/: controller.py
skills/pid/: pyproject.toml
skills/pid/pid/: controller.py
skills/produce_product/: pyproject.toml
skills/produce_product/produce_product/: teacher.py
skills/start_reaction/: pyproject.toml
