[project]
name = "MPC Benchmark"
version = "0.1.0"
description = "Linear MPC for Benchmarks"
authors = [{ name = "John Doe", email = "john.doe@composabl.com" }]
dependencies = [
    "composabl-core",
    "numpy",
    "gekko",
    "scipy"

]

[composabl]
type = "skill-controller"
entrypoint = "mpc_benchmark.controller:Controller"
